Fix CORS for Capacitor Android app and improve login UX
- SecurityConfig: always inject capacitor://localhost, https://localhost,
  http://localhost into allowed origins so the Android WebView works even
  when CORS_ALLOWED_ORIGINS env var is set in Railway without these entries
- api.js: increase timeout to 60 s (Railway cold-start can take ~50 s),
  normalise timeout/network errors into readable messages
- Login.jsx: show "Server is waking up" hint after 8 s, retry button on
  timeout, use err.message fallback for network errors
- capacitor.config.json: Capacitor Android config (appId, androidScheme)
- package.json: added @capacitor/core, @capacitor/cli, @capacitor/android

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>